--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -26,4 +26,7 @@ jobs:
       - name: Dump steps context
         env:
           STEPS_CONTEXT: ${{ toJson(steps.review_request.outputs.review_request_data) }}
-        run: echo "$STEPS_CONTEXT"
+          STEP_COUNT!: ${{steps.review_request.outputs.review_request_data}}
+        run: |
+          echo "$STEPS_CONTEXT"
+          echo "$STEPS_COUNT1"
