--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -29,4 +29,8 @@ jobs:
           STEP_COUNT!: ${{steps.review_request.outputs.review_request_data}}
         run: |
           echo "$STEPS_CONTEXT"
-          echo "$STEPS_COUNT1"
+          echo "$STEPS_COUNT!"
+      - name: check output
+        id: checkoutputApi
+        run: |
+          echo "Running on default: ${{ steps.branch-name.outputs.current_branch }} ${{ $STEPS_COUNT!}}"
