--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -33,4 +33,4 @@ jobs:
       - name: check output
         id: checkoutputApi
         run: |
-          echo "Running on default: ${{ steps.branch-name.outputs.current_branch }}"
+          echo "$STEP_COUNT"
