--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -33,4 +33,4 @@ jobs:
       - name: check output
         id: checkoutputApi
         run: |
-          echo "hello "
+          echo "$STEP_COUNT "
