--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -34,4 +34,9 @@ jobs:
         id: checkoutputApi
         if: true
         run: |
-          echo "$STEP_COUNT "
+          if echo "${{ env.STEP_COUNT }}" | grep -q "expected_value"; then
+            echo "API provided the expected data."
+          else
+            echo "API did not provide the expected data."
+            exit 1
+          fi
