--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -1,39 +1,39 @@
-# Workflow for send request to product owners
-name: CI
-# Controls when the workflow will run
-on:
-  # Triggers the workflow pull request events but only for the "main" branch
-  pull_request:
-    types: [opened, edited, synchronize]
-    branches: [ "main" ]
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
     # Steps represent a sequence of tasks that will be executed as part of the jobs
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4.1.1
+      
+      # Step to verify reviewer name using API
       - name: verify reviewer name
         id: review_request
         run: |
           response="$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: 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" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/Sarthak-Shukla-Cedcoss/gitActionTest/pulls/${{ github.event.pull_request.number }}/requested_reviewers)"
-          echo "review_request_data="$response >> $GITHUB_OUTPUT
+          echo "::set-output name=review_request_data::$response"
+      
+      # Dump steps context and check for "users" in the API response
       - name: Dump steps context
         env:
-          STEPS_CONTEXT: ${{ toJson(steps.review_request.outputs.review_request_data) }}
-          STEP_COUNT: ${{steps.review_request.outputs.review_request_data}}
+          REVIEW_REQUEST_DATA: ${{ steps.review_request.outputs.review_request_data }}
         run: |
-          echo "${{ toJson(env.STEP_COUNT.users.id) }}"
+          echo "Review Request Data: $REVIEW_REQUEST_DATA"
+          echo "$REVIEW_REQUEST_DATA" | grep -q "users"
+      
+      # Check output and fail if the expected data is not present
       - name: check output
         id: checkoutputApi
-        if: true
+        if: success()
         run: |
-          if echo "${{ env.STEPS_CONTEXT }}" | grep -q "users"; then
+          if echo "$REVIEW_REQUEST_DATA" | grep -q "users"; then
             echo "API provided the expected data."
           else
             echo "API did not provide the expected data."
