--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -1,19 +1,23 @@
-
+# Workflow for send request to product owners
+name: CI
+# Controls when the workflow will run
+on:
+  # Triggers the workflow pull request events but only for the "main" branch
+  pull_request:
+    types: [opened, edited, synchronize]
+    branches: [ "main" ]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
     # Steps represent a sequence of tasks that will be executed as part of the jobs
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4.1.1
-      
-      # Step to verify reviewer name using API
       - name: verify reviewer name
         id: review_request
         run: |
