--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           REVIEW_REQUEST_DATA: ${{ steps.review_request.outputs.review_request_data }}
         run: |
-          echo "Review Request Data: ${{ env.REVIEW_REQUEST_DATA.users.id}}"
+          echo "Review Request Data: ${{ toJson(env.REVIEW_REQUEST_DATA.users.id)}}"
       
       # Check output and fail if the expected data is not present
       - name: check output
