--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -22,7 +22,7 @@ jobs:
         id: review_request
         run: |
           response="$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: 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" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/Sarthak-Shukla-Cedcoss/gitActionTest/pulls/${{ github.event.pull_request.number }}/requested_reviewers)"
-          echo "::set-output name=review_request_data::$response"
+          echo "SET_VAR="$response >> $GITHUB_ENV
       
       # Dump steps context and check for "users" in the API response
       - name: Dump steps context
