--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -22,25 +22,15 @@ jobs:
         id: review_request
         run: |
           response="$(curl -L -H "Accept: application/vnd.github+json" -H "Authorization: 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" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/Sarthak-Shukla-Cedcoss/gitActionTest/pulls/${{ github.event.pull_request.number }}/requested_reviewers)"
-          echo "SET_VAR="$response >> $GITHUB_ENV
-      
-      # Dump steps context and check for "users" in the API response
-      - name: Dump steps context
-        env:
-          REVIEW_REQUEST_DATA: ${{ steps.review_request.outputs.review_request_data }}
-        run: |
-          echo "Review Request Data: ${{ toJson(env.REVIEW_REQUEST_DATA.users.id)}}"
-      - name: Debug Environment Variables
-        run: |
-          env
+          echo "REVIEW_RESPONSE="$response >> $GITHUB_ENV
 
       # Check output and fail if the expected data is not present
       - name: check output
         id: checkoutputApi
         if: success()
         run: |
-          if echo "$SET_VAR" | grep -q "users"; then
-            echo "API provided the expected data."
+          if echo "$REVIEW_RESPONSE" | grep -q "users"; then
+            echo "API provided the expected data. $REVIEW_RESPONSE.users"
           else
             echo "API did not provide the expected data."
             exit 1
