--- a/.github/workflows/testScript.yml
+++ b/.github/workflows/testScript.yml
@@ -30,7 +30,7 @@ jobs:
         if: success()
         run: |
           if echo "$REVIEW_RESPONSE" | grep -q "users"; then
-            echo "API provided the expected data. ${{ env.REVIEW_RESPONSE }}"
+            echo "API provided the expected data. ${{ env.REVIEW_RESPONSE.[0].id }}"
           else
             echo "API did not provide the expected data."
             exit 1
